// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsPoplist renders correctly 1`] = `
<DocumentFragment>
  .cache-10tjcsc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-p2t92d {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.cache-1wjn2ox {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-1wjn2ox.cache-1wjn2ox {
  margin-right: 0;
}

.cache-1ts3xp3-Component {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-1khsh81 {
  box-shadow: 0 -1px 5px 3px rgba(165, 165, 205, 0.15);
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfd;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-160wpiy {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-160wpiy.cache-160wpiy {
  margin: 4px;
}

.cache-1a9zbjx {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
    <div
      class="e1l6meh00 cache-10tjcsc e1l6meh01"
    >
      <div
        class="cache-p2t92d eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-1wjn2ox"
        >
          <span
            aria-disabled="false"
            class="cache-1ts3xp3-Component e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
      </div>
      +1
      <div
        class="cache-1khsh81 eom2dbt0"
      >
        <div
          class="e1vt8sjg2 cache-160wpiy"
        >
          <span
            aria-disabled="false"
            class="cache-1a9zbjx e1vt8sjg1"
          >
            cloud
          </span>
        </div>
      </div>
    </div>
     
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold 1`] = `
<DocumentFragment>
  .cache-10tjcsc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-p2t92d {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.cache-15ngvwu {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-15ngvwu.cache-15ngvwu {
  margin-right: 8px;
}

.cache-1ts3xp3-Component {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-1wjn2ox {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-1wjn2ox.cache-1wjn2ox {
  margin-right: 0;
}

<div>
    <div
      class="e1l6meh00 cache-10tjcsc e1l6meh01"
    >
      <div
        class="cache-p2t92d eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-15ngvwu"
        >
          <span
            aria-disabled="false"
            class="cache-1ts3xp3-Component e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
        <div
          class="e1vt8sjg2 cache-1wjn2ox"
        >
          <span
            aria-disabled="false"
            class="cache-1ts3xp3-Component e1vt8sjg1"
          >
            cloud
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  .cache-10tjcsc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-p2t92d {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.cache-15ngvwu {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-15ngvwu.cache-15ngvwu {
  margin-right: 8px;
}

.cache-1ts3xp3-Component {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-1wjn2ox {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-1wjn2ox.cache-1wjn2ox {
  margin-right: 0;
}

.cache-1khsh81 {
  box-shadow: 0 -1px 5px 3px rgba(165, 165, 205, 0.15);
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfd;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-160wpiy {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-160wpiy.cache-160wpiy {
  margin: 4px;
}

.cache-1a9zbjx {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
    <div
      class="e1l6meh00 cache-10tjcsc e1l6meh01"
    >
      <div
        class="cache-p2t92d eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-15ngvwu"
        >
          <span
            aria-disabled="false"
            class="cache-1ts3xp3-Component e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
        <div
          class="e1vt8sjg2 cache-1wjn2ox"
        >
          <span
            aria-disabled="false"
            class="cache-1ts3xp3-Component e1vt8sjg1"
          >
            cloud
          </span>
        </div>
      </div>
      +1
      <div
        class="cache-1khsh81 eom2dbt0"
      >
        <div
          class="e1vt8sjg2 cache-160wpiy"
        >
          <span
            aria-disabled="false"
            class="cache-1a9zbjx e1vt8sjg1"
          >
            provider
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  .cache-10tjcsc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-p2t92d {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.cache-1wjn2ox {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-1wjn2ox.cache-1wjn2ox {
  margin-right: 0;
}

.cache-1ts3xp3-Component {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-1khsh81 {
  box-shadow: 0 -1px 5px 3px rgba(165, 165, 205, 0.15);
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfd;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-160wpiy {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-160wpiy.cache-160wpiy {
  margin: 4px;
}

.cache-1a9zbjx {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
    <div
      class="e1l6meh00 cache-10tjcsc e1l6meh01"
    >
      <div
        class="cache-p2t92d eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-1wjn2ox"
        >
          <span
            aria-disabled="false"
            class="cache-1ts3xp3-Component e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
      </div>
      +2
      <div
        class="cache-1khsh81 eom2dbt0"
      >
        <div
          class="e1vt8sjg2 cache-160wpiy"
        >
          <span
            aria-disabled="false"
            class="cache-1a9zbjx e1vt8sjg1"
          >
            cloud
          </span>
        </div>
        <div
          class="e1vt8sjg2 cache-160wpiy"
        >
          <span
            aria-disabled="false"
            class="cache-1a9zbjx e1vt8sjg1"
          >
            provider
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with multiline 1`] = `
<DocumentFragment>
  .cache-10tjcsc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1rfm3qj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-1rfm3qj>* {
  margin-bottom: 8px;
}

.cache-15ngvwu {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-15ngvwu.cache-15ngvwu {
  margin-right: 8px;
}

.cache-1ts3xp3-Component {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-1wjn2ox {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-1wjn2ox.cache-1wjn2ox {
  margin-right: 0;
}

.cache-1khsh81 {
  box-shadow: 0 -1px 5px 3px rgba(165, 165, 205, 0.15);
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfd;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-160wpiy {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f6f8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-160wpiy.cache-160wpiy {
  margin: 4px;
}

.cache-1a9zbjx {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
    <div
      class="e1l6meh00 cache-10tjcsc e1l6meh01"
    >
      <div
        class="cache-1rfm3qj eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-15ngvwu"
        >
          <span
            aria-disabled="false"
            class="cache-1ts3xp3-Component e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
        <div
          class="e1vt8sjg2 cache-1wjn2ox"
        >
          <span
            aria-disabled="false"
            class="cache-1ts3xp3-Component e1vt8sjg1"
          >
            cloud
          </span>
        </div>
      </div>
      +1
      <div
        class="cache-1khsh81 eom2dbt0"
      >
        <div
          class="e1vt8sjg2 cache-160wpiy"
        >
          <span
            aria-disabled="false"
            class="cache-1a9zbjx e1vt8sjg1"
          >
            provider
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with not tags 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;
